[package]
name = "bevy_bounce_ball_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  "0.7.0"
bevy_fly_camera = {path="../bevy_fly_camera"}
heron = { version = "3.1.0",features=["3d"]}
bevy_atmosphere = "0.3.1"
bevy_screen_diags = "0.4.0"
bevy_obj = "0.7.0"
rand = "0.8.5"